--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           source: "."
-          target: "/home/${{ secrets.USERNAME }}/app"
+          target: "/home/maxai"
 
       - name: Rodar comandos no servidor
         uses: appleboy/ssh-action@v1.0.3
@@ -44,6 +44,5 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd ~/app
-            npm install
-            pm2 restart app || pm2 start app.js --name app
+            cd /home/maxai
+            npm install       
