update deploy.yml 1652

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Instalar dependências
         run: npm install
 
+      - name: Lista arquivos
+        run: ls *.*
+
       - name: Rodar testes
         run: npm test
 
