--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
     steps:
       - name: Copiar arquivos para o servidor via SCP
-        uses: appleboy/scp-action@master
+        uses: actions/checkout@v4
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
