update app.js com test

--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "Max Git CI CD",
   "main": "app.js",
-  "scripts": {    
-    "test": "echo \"Running tests...\" && exit 0"
+  "scripts": {
+    "test": "mocha"
   },
   "author": "Edson",
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^11.4.0",
+    "supertest": "^7.1.1"
   }
 }
